# cookiecutter-python-opencode

./: CHANGELOG.md  LICENSE  README.md  SPHINX_THEMES.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  README.md  opencode.yml  pyproject.toml  tox.ini
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/docs/: conf.py  index.rst
{{cookiecutter.project_slug}}/docs/api/: index.rst  modules.rst
{{cookiecutter.project_slug}}/docs/architecture/: architecture.rst  decisions.rst  index.rst
{{cookiecutter.project_slug}}/docs/decisions/: README.md
{{cookiecutter.project_slug}}/docs/general/: architecture.rst  description.rst  index.rst  vision.rst
{{cookiecutter.project_slug}}/docs/implementation/: index.rst  plan.rst  status.rst
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: __init__.py
{{cookiecutter.project_slug}}/tests/: conftest.py  test_plan.md
