[project]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = "{{cookiecutter.project_name}}"
authors = [
  { name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.author_email}}" }
]
requires-python = ">={{cookiecutter.python_version}}"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "sphinx>=6.0.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "sphinx-rtd-theme>=1.3.0",
    "mypy>=1.0.0",
    "tox>=4.0.0",
]

# Sphinx themes - install based on your choice
sphinx-themes = [
    "shibuya>=2024.1.28",
    "furo>=2023.9.10",
    "pydata-sphinx-theme>=0.14.0",
    "sphinx-book-theme>=1.0.0",
    "sphinx-immaterial>=0.11.0",
    "sphinxawesome-theme>=5.0.0",
    "piccolo-theme>=0.18.0",
    "sphinx-press-theme>=0.8.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/{{cookiecutter.package_name}} --cov-report=term-missing --cov-report=html"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

{% if cookiecutter.use_black %}
[tool.black]
line-length = 88
target-version = ["py{{cookiecutter.python_version.replace('.', '')}}"]
include = '\.pyi?$'
extend-exclude = [
    "/.eggs/",
    "/.git/",
    "/.hg/",
    "/.mypy_cache/",
    "/.tox/",
    "/.venv/",
    "/build/",
    "/dist/",
]
{% endif %}

{% if cookiecutter.use_ruff %}
[tool.ruff]
target-version = "py{{cookiecutter.python_version.replace('.', '')}}"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "C4", "UP"]
ignore = ["E501", "B008"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]
{% endif %}

[tool.coverage.run]
source = ["src/{{cookiecutter.package_name}}"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == \"__main__\":",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "{{cookiecutter.python_version}}"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true